--- a/BlockChain/nbproject/project.properties
+++ b/BlockChain/nbproject/project.properties
@@ -27,9 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/BlockChain.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.2-javadoc.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\commons-logging-1.2-javadoc.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\commons-logging-1.2.jar
+file.reference.httpclient-osgi-4.3.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\httpclient-osgi-4.3.jar
+file.reference.json-20180130.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\json-20180130.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-logging-1.2-javadoc.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpclient-osgi-4.3.jar}:\
+    ${file.reference.json-20180130.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
