--- a/BlockChain/nbproject/project.properties
+++ b/BlockChain/nbproject/project.properties
@@ -28,16 +28,24 @@ dist.jar=${dist.dir}/BlockChain.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-logging-1.2-javadoc.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\commons-logging-1.2-javadoc.jar
+file.reference.commons-logging-1.2-javadoc.jar-1=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\commons-logging-1.2-javadoc.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\commons-logging-1.2.jar
 file.reference.httpclient-osgi-4.3.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\httpclient-osgi-4.3.jar
+file.reference.httpclient-osgi-4.3.jar-1=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\httpclient-osgi-4.3.jar
 file.reference.json-20180130.jar=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\json-20180130.jar
+file.reference.json-20180130.jar-1=C:\\Users\\c.saldarriaga\\Desktop\\Investigaci\u00f3n\\json-20180130.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-logging-1.2-javadoc.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.httpclient-osgi-4.3.jar}:\
-    ${file.reference.json-20180130.jar}
+    ${file.reference.json-20180130.jar}:\
+    ${file.reference.commons-logging-1.2-javadoc.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.httpclient-osgi-4.3.jar-1}:\
+    ${file.reference.json-20180130.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,7 +69,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=blockchain.BlockChain
+main.class=blockchain.Nodo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
